syntax = "proto3";

option java_package = "com.cloudpubsub.protobuf";
option java_outer_classname = "CustomerMessage2OuterClass";

message CustomerMessage {
  string first_name = 1;
  string last_name = 2;
  optional string country = 3;
  int32 age = 4;
}